--- a/src/styles/Router.css
+++ b/src/styles/Router.css
@@ -6,4 +6,5 @@
   background-color: gainsboro;
   display: flex;
   justify-content: center;
+  align-items: flex-start;
 }
